tests/bytes/errors/sha256_non_bytes.dby
import std.hash as hash
print(hash.sha256("Not bytes"))
